--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -44,23 +44,23 @@ jobs:
       - name: Build Project
         run: npm run build
 
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  # test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 21.7.3
-          cache: 'npm'
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 21.7.3
+  #         cache: 'npm'
 
-      - name: Copy environment variables
-        run: mv .env.sample .env
+  #     - name: Copy environment variables
+  #       run: mv .env.sample .env
 
-      - name: Install dependencies
-        run: npm ci
+  #     - name: Install dependencies
+  #       run: npm ci
 
-      - name: Run Tests
-        run: npm run test:ci
+  #     - name: Run Tests
+  #       run: npm run test:ci
