--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.1.7",
+    "eslint-config-prettier": "^10.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8",
+    "prettier": "^3.5.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
