--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8",
     "prettier": "^3.5.2",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
